--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   # firebase_storage: ^11.1.2
   # firebase_analytics: ^10.3.0
   # cloud_firestore: ^4.6.0
+ 
+  # 业务组件
   # 登录组件
   # 首页组件
   # 我的组件
