--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0-35.0.dev <4.0.0'
-
+  # sdk: '>=3.1.0-35.0.dev <3.10.1'
+   sdk: '^3.0.0'
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
@@ -42,7 +42,6 @@ dependencies:
   # firebase_storage: ^11.1.2
   # firebase_analytics: ^10.3.0
   # cloud_firestore: ^4.6.0
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
