--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  flutter_native_splash: ^2.3.0
+  
+flutter_native_splash:
+   color: "#42a5f5"
+   background_image: "lib/images/app_splash.png"
+ 
   # firebase_auth: ^4.5.0
   # firebase_core: ^2.11.0
   # firebase_messaging: ^14.5.0
