--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cached_network_image: ^3.2.3
   youtube_player_iframe: ^4.0.4
   image_picker: ^0.8.7+5
+  auto_size_text: ^3.0.0
+  smooth_page_indicator: ^1.1.0
   
 flutter_native_splash:
    color: "#42a5f5"
